Moon flight added

--- a/basic.ini
+++ b/basic.ini
@@ -6,7 +6,7 @@ STAR_COLORS=blue,brown,grey,magenta,cyan
 SPACE_COLOR = #000022
 X = 0
 Y = 100
-ZOOM = 0.5
+ZOOM = 1
 
 [Earth]
 type=planet
@@ -18,17 +18,7 @@ Mass=800000
 R=470
 color=blue
 
-[Moon]
-type=planet
-X=500
-Y=-3000
-VX=15.0
-VY=0.0
-Mass=100000
-R=100
-color=yellow
-
-[MoonFlyer]
+[EarthOrbiter]
 type=rocket
 X=500
 Y=280
@@ -39,7 +29,7 @@ Fuel=150
 FuelConsume=1
 FuelWeight=0.2
 FuelEfficient=140
-RocketClass=rockets.rocket2.MoonFlyer
+RocketClass=rockets.rocket1.EarthOrbiter
 EngineOnImage=images/rocket_s_e.png
 EngineOffImage=images/rocket_s.png
 
