Landing ability added

--- a/lunarOrbiter.ini
+++ b/lunarOrbiter.ini
@@ -18,7 +18,17 @@ Mass=800000
 R=470
 color=blue
 
-[EarthLander]
+[Moon]
+type=planet
+X=500
+Y=-3000
+VX=15.0
+VY=0.0
+Mass=100000
+R=100
+color=yellow
+
+[MoonFlyer]
 type=rocket
 X=500
 Y=280
@@ -29,7 +39,7 @@ Fuel=150
 FuelConsume=1
 FuelWeight=0.2
 FuelEfficient=140
-RocketClass=rockets.rocket4.EarthLander
+RocketClass=rockets.rocket2.MoonFlyer
 EngineOnImage=images/rocket_s_e.png
 EngineOffImage=images/rocket_s.png
 
