Orbit docking added

--- a/landing1circle.ini
+++ b/landing1circle.ini
@@ -7,7 +7,6 @@ SPACE_COLOR = #000022
 X = 0
 Y = 100
 ZOOM = 1
-LANDING_MAX_SPEED = 4
 
 [Earth]
 type=planet
@@ -19,7 +18,7 @@ Mass=800000
 R=470
 color=blue
 
-[Ship]
+[EarthLander]
 type=rocket
 X=500
 Y=280
@@ -30,22 +29,10 @@ Fuel=150
 FuelConsume=1
 FuelWeight=0.2
 FuelEfficient=140
-RocketClass=rockets.docking1.Active
+RocketClass=rockets.rocket4.EarthLander
 EngineOnImage=images/rocket_s_e.png
 EngineOffImage=images/rocket_s.png
 
 
-[Station]
-type=rocket
-X=500
-Y=-300
-VX=28
-VY=0
-Mass=50
-Fuel=50
-FuelConsume=1
-FuelWeight=1
-FuelEfficient=140
-RocketClass=rockets.docking1.Passive
-EngineOnImage=images/station.png
-EngineOffImage=images/station.png
+
+
