Smooth launch and refactoring

--- a/dockingtest.ini
+++ b/dockingtest.ini
@@ -6,23 +6,23 @@ STAR_COLORS=blue,brown,grey,magenta,cyan
 SPACE_COLOR = #000022
 X = 0
 Y = 100
-ZOOM = .5
+ZOOM = 1
 LANDING_MAX_SPEED = 4
 
 [Earth]
 type=planet
 X=500
-Y=1800
+Y=800
 VX=0.0
 VY=0.0
-Mass=7000000
-R=1400
+Mass=800000
+R=470
 color=blue
 
 [Ship]
 type=rocket
 X=500
-Y=350
+Y=280
 VX=0
 VY=0
 Mass=2
@@ -30,6 +30,22 @@ Fuel=150
 FuelConsume=1
 FuelWeight=0.2
 FuelEfficient=140
-RocketClass=rockets.bigplanet.SmoothhOrbiter
+RocketClass=rockets.docking1.Active
 EngineOnImage=images/rocket_s_e.png
 EngineOffImage=images/rocket_s.png
+
+
+[Station]
+type=rocket
+X=500
+Y=-300
+VX=28
+VY=0
+Mass=50
+Fuel=50
+FuelConsume=1
+FuelWeight=1
+FuelEfficient=140
+RocketClass=rockets.docking1.Passive
+EngineOnImage=images/station.png
+EngineOffImage=images/station.png
